# Radm

./: .gitignore  Makefile  RADM_SPEC.md  README.md  radm.toml
aggregator/: Cargo.toml  build.rs
aggregator/src/: bpf_consumer.rs  bpf_loader.rs  cgroup_resolver.rs  config.rs  graph_builder.rs  ipc_server.rs  main.rs  quarantine_receiver.rs  types.rs
inference/: radm.yaml  requirements.txt
inference/src/: detector.py  main.py  model.py  trainer.py
inference/src/torch/: __init__.py
inference/src/torch/nn/: __init__.py  functional.py  utils.py
inference/src/torch/optim/: __init__.py
inference/src/torch_geometric/: __init__.py  data.py  nn.py
kernel/: Makefile
kernel/src/: radm_helpers.h  radm_maps.h  radm_tc.c  radm_tp.c  radm_types.h  radm_xdp.c
mitigation/: Cargo.toml  build.rs
mitigation/src/: bpf_updater.rs  config.rs  forensics.rs  main.rs  quarantine_exec.rs
mitigation/src/proto/: radm.v1.rs
proto/: generate.sh  radm.proto
scripts/: radm-ctl.sh  simulate-attack.sh
tests/integration/: docker-compose.test.yml
tests/unit/inference/: test_model.py
