[package]
name    = "radm-mitigation"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio           = { version = "1", features = ["full"] }
prost           = "0.13"
bytes           = "1"
tracing         = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow          = "1"
serde            = { version = "1", features = ["derive"] }
toml            = "0.8"
config          = "0.14"
rand            = "0.8"
aes-gcm         = "0.10"
chrono          = "0.4"

[target.'cfg(unix)'.dependencies]
aya             = "0.13"
procfs          = "0.16"
nix             = { version = "0.29", features = ["process", "ptrace", "sched", "uio"] }
